Fixed alignment of modal headers

--- a/app/stylesheets/design/_subscriptions.scss
+++ b/app/stylesheets/design/_subscriptions.scss
@@ -50,6 +50,7 @@
 #modal.subscribe .icons .header h5,
 #subscriptions .icons .header h5 {
   float: left;
+  margin-top: 0;
   text-align: right;
   width: 73px;
   }
@@ -79,6 +80,7 @@
 #subscriptions .icons .email h5 {
   float: left;
   margin-right: 15px;
+  margin-top: 0;
   text-align: right;
   width: 75px;
   }
